# time-series-analysis-project

./: .gitignore  Data_overview.ipynb  README.md  pyproject.toml  requirements.txt
data/: df_risk_factors2.csv  features.csv  finalFeatures.csv  test.csv  test_y.csv  train.csv  train_y.csv
data/artifacts/: catboost_regressor.cbm
notebooks/: Autoregressive_model.ipynb  Change_point_detector.ipynb  Data_overview.ipynb  Dataset_overview.ipynb  Features_generation.ipynb  Gradient_boosting_model.ipynb  Pipeline.ipynb
src/ts_package/: change_point.py  tuning.py  utils.py
src/ts_package/feature_engineering/: utils.py
src/ts_package/plot/: __init__.py  decomposition.py  time_series.py
src/ts_package/preprocessing/: __init__.py  boxcox.py  smoothing.py
src/ts_package/validation/: feature_selection.py  metric.py  validation.py
