[tool.poetry]
name = "time-series-analysis-project"
version = "0.1.0"
description = ""
authors = ["M1croZavr <tlashukov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ts_package", from="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
