[tool.poetry]
name = "time-series-analysis-project"
version = "0.1.0"
description = ""
authors = ["M1croZavr <tlashukov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ts_package", from="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
pandas = "^2.2.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.2"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"
catboost = "^1.2.3"
scikit-learn = "^1.4.2"
optuna = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
